# playwright-agent

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  convert-test  docker-compose.yml  orchestrator_runner.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  setup.sh  simple_orchestrator.py  start-ui.sh
.claude/agents/: test-operator.md  test-validator.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-ci.yml  playwright.yml
demo/: example_output.spec.ts
orchestrator/: __init__.py  cli.py  config.py  debug_mcp.py  load_env.py  main.py  orchestrator.py  requirements.txt  test_e2e.py
orchestrator/agents/: auth_handler.py  base_agent.py  exploratory_agent.py  spec_synthesis_agent.py  spec_writer_agent.py
orchestrator/api/: dashboard.py  db.py  import_utils.py  main.py  models.py  models_db.py  settings.py
orchestrator/reporting/: report_generator.py
orchestrator/tests/: run_all_tests.py  test_01_basic_query.py  test_02_file_access.py  test_03_mcp_access.py  test_04_subagent.py  test_05_explore_sites.py  test_05b_explore_with_perms.py  test_06_login_interaction.py  test_07_vague_targets.py  test_08_full_validation.py
orchestrator/utils/: json_utils.py
schemas/: plan.schema.json  run.schema.json
specs/: 01_simple_navigation.md  05_ecommerce_workflow.md  06_data_table_pagination.md  07_modal_dialog_interactions.md  08_form_validation.md  README.md  my-test.md  spec-metadata.json
web/: Dockerfile  package-lock.json  package.json
web/src/app/: layout.tsx  (+2 more)
(+23 files in other folders)
